--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -398,3 +398,38 @@
 .demo-select-header
   .demo-header-searchbox
     width 100%
+
+/*-- COMMENTS AREA --*/
+.message-branch
+  margin-bottom 20px
+.comments-user
+  padding 10px 25px
+  background-color white
+  margin 15px
+  display inline-block
+  height 400px
+  overflow-x auto
+  border 1px solid #ddd
+
+  .comment
+    background-color #d9edf7
+    border-radius 5px
+    border 1px solid #B8E0F7
+    padding 15px
+    margin 15px 0
+    width 80%
+    display inline-block
+    small
+      float right
+
+  .branchoffice-comment
+    background-color #f5f5f5
+    border-radius 5px
+    border 1px solid #eee
+    padding 15px
+    margin 15px 0
+    display inline-block
+    width 80%
+    float right
+    small
+      float right
