--- a/app/css/main.css
+++ b/app/css/main.css
@@ -604,6 +604,43 @@ audio:not([controls]),
 .demo-select-header .demo-header-searchbox {
   width: 100%;
 }
+.message-branch {
+  margin-bottom: 20px;
+}
+.comments-user {
+  padding: 10px 25px;
+  background-color: #fff;
+  margin: 15px;
+  display: inline-block;
+  height: 400px;
+  overflow-x: auto;
+  border: 1px solid #ddd;
+}
+.comments-user .comment {
+  background-color: #d9edf7;
+  border-radius: 5px;
+  border: 1px solid #b8e0f7;
+  padding: 15px;
+  margin: 15px 0;
+  width: 80%;
+  display: inline-block;
+}
+.comments-user .comment small {
+  float: right;
+}
+.comments-user .branchoffice-comment {
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  border: 1px solid #eee;
+  padding: 15px;
+  margin: 15px 0;
+  display: inline-block;
+  width: 80%;
+  float: right;
+}
+.comments-user .branchoffice-comment small {
+  float: right;
+}
 .block-ui-overlay {
   width: 100%;
   height: 100%;
