fix error merge

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -133,7 +133,7 @@
   @extend .box
   background-color white
   margin-bottom 15px
-  transition(all 1s )
+  transition(all 0.3s )
   a
     color fontClr
     &:hover
@@ -154,7 +154,7 @@
   .box-footer
     text-align center
   &:hover
-    box(15px, 0 4px 20px rgba(0,0,0,0.1), 1px solid #f5f5f5, 3px)
+    box(15px, 0 4px 20px rgba(0,0,0,0.2), 1px solid #f5f5f5, 3px)
 
 .box-default
   @extend .box
@@ -290,6 +290,7 @@
     background-size wSmallSlider
     background-repeat no-repeat
   .owl-nav
+    font-size 36px
     position absolute
     top 50%
     left 0
@@ -299,6 +300,7 @@
       position absolute
       padding 5px 20px
     .owl-next
+      font-size 36px
       right 25px
       position absolute
       padding 5px 20px
@@ -348,6 +350,7 @@
     top 50%
     left 0
     right 0
+    font-size 36px
     .owl-prev
       left 35px
       position absolute
@@ -454,7 +457,7 @@
   .widget-title-first
     background transparent
     padding 10px 5px
-    color #555 !important
+    color fontClr !important
     border-bottom 1px solid #eee
   ul
     li > a
@@ -462,6 +465,10 @@
       text-decoration none
       &:hover
         color #ff7300
+.delete-filter
+  cursor pointer
+  color #555
+  float right
 .box-widget
   widget(white, 2px, 15px, 1px solid #ddd, none)
   .widget-title
