--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -13,7 +13,7 @@ body
 h1,h2,h3,h4,h5, h6
   font-family fontTitles
   margin 0
-  font-weight 400
+  font-weight 700
 
 strong
   font-weight 700
@@ -152,7 +152,7 @@ md-input-container
     md-input-container
       width 50%
     .article-price
-      color warning
+      color black
       margin-bottom 15px
   h3
     color fontClr
