--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -32,36 +32,39 @@
                     <img ng-src="{{Product.detail.featuredImage.url}}" alt="{{Product.detail.name}}"
                          ng-if="Product.detail.galleryImages.length < 1"
                          style="height: 250px;width: 100%;margin-bottom: 15px;">
-                    <br>
-                    <div class="text-center">
-                        <a href="http://www.sydgroup.mx/page/como-comprobar-la-autenticidad-del-producto"
-                           class="btn btn-dark">Como comprobar la autenticidad</a>
-                    </div>
                 </div>
                 <div class="col-sm-8">
                     <div class="article-description">
-                        <h3>{{Product.detail.name}}</h3>
-                        <hr>
-                        <h3 class="article-price">{{ Product.detail.price | currency}}</h3>
-                        <br>
-                        <form name="FormQty">
-                            <md-input-container class="md-block">
-                                <label>Cantidad</label>
-                                <input type="number" placeholder="0" ng-model="Product.detail.qty" min="1"
-                                       ng-pattern="/^-?[0-9][^\.]*$/" name="qty" required/>
-                                <div class="errors" ng-messages="FormQty.qty.$error">
-                                    <div ng-message="required">Requiredo</div>
-                                    <div ng-message="pattern">Cantidad no valida</div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <h4>{{Product.detail.name}}..</h4>
+                                    <br>
+                                    <h2 class="article-price">{{ Product.detail.price | currency}}</h2>
+                                    <br>
                                 </div>
-                            </md-input-container>
+                                <div class="col-sm-6">
+                                    <form name="FormQty">
+                                        <md-input-container class="md-block">
+                                            <label>Cantidad</label>
+                                            <input type="number" placeholder="0" ng-model="Product.detail.qty" min="1"
+                                                   ng-pattern="/^-?[0-9][^\.]*$/" name="qty" required/>
+                                            <div class="errors" ng-messages="FormQty.qty.$error">
+                                                <div ng-message="required">Requiredo</div>
+                                                <div ng-message="pattern">Cantidad no valida</div>
+                                            </div>
+                                        </md-input-container>
 
-                        </form>
-                        <button ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
+                                    </form>
+                                    <button ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
                                         price: Product.detail.price, image: Product.detail.featuredImage.url,
                                         qty: Product.detail.qty, taxonomies : Product.detail.taxonomies, shipmentPrice: Product.detail.shipmentPrice, typeTax: Product.detail.typeTax}, Product.detail.qty)"
-                                ng-disabled="Shop.itemInCart(Product.detail.id)|| FormQty.$invalid"
-                                class="btn btn-danger">Agregar a carrito
-                        </button>
+                                            ng-disabled="Shop.itemInCart(Product.detail.id)|| FormQty.$invalid"
+                                            class="btn btn-danger">Agregar a carrito
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                         <hr>
                         <h4>Descripción</h4>
                         <hr>
