ajuste de estilo

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -59,6 +59,14 @@
     border 1px solid optional
     box-shadow 0 3px 10px rgba(0,0,0,0.3)
 
+.btn-optional
+  button(white, optional, 3px, 5px 10px, 1px solid optional)
+  &:hover, &:focus
+    color white
+    background-color optional
+    border 1px solid optional
+    box-shadow 0 3px 10px rgba(0,0,0,0.3)
+
 /* Buttons outline color */
 .btn-outline-primary
   button(primary, transparent, 3px, 5px 10px, 1px solid primary)
