--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -57,7 +57,7 @@
   .nav
     margin-top 10px
     > li > .shopping-cart
-      padding-right 45px
+      padding-right 0
   .navbar-brand .logo
     width 250px
 
