--- a/app/css/main.css
+++ b/app/css/main.css
@@ -69,7 +69,7 @@ audio:not([controls]),
   margin-top: 10px;
 }
 .one-rows-nav .nav > li > .shopping-cart {
-  padding-right: 45px;
+  padding-right: 0;
 }
 .one-rows-nav .navbar-brand .logo {
   width: 250px;
@@ -225,6 +225,20 @@ audio:not([controls]),
 }
 .btn-black:hover,
 .btn-black:focus {
+  background-color: #f387c7;
+  border: 1px solid #f387c7;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+}
+.btn-optional {
+  color: #fff;
+  background: #f387c7;
+  border-radius: 3px;
+  padding: 5px 10px;
+  border: 1px solid #f387c7;
+}
+.btn-optional:hover,
+.btn-optional:focus {
+  color: #fff;
   background-color: #f387c7;
   border: 1px solid #f387c7;
   box-shadow: 0 3px 10px rgba(0,0,0,0.3);
