--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -119,7 +119,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="container">
+                            <div class="container" ng-if="Payment.addAddress" >
                                 <div class="row">
                                     <div class="col-md-12">
                                         <md-input-container md-no-float
@@ -141,7 +141,7 @@
                                     <div class="col-md-6">
                                         <md-input-container md-no-float
                                                             ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
-                                            <input ng-model="Payment.formData.address" type="text" id="addressBetween1"
+                                            <input ng-model="Payment.formData.metadata.addressBetween1" type="text" id="addressBetween1"
                                                    name="addressBetween1"
                                                    placeholder="Calle 1"
                                                    required>
@@ -153,7 +153,7 @@
                                     <div class="col-md-6">
                                         <md-input-container md-no-float
                                                             ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
-                                            <input ng-model="Payment.formData.address" type="text" id="addressBetween2"
+                                            <input ng-model="Payment.formData.metadata.addressBetween2" type="text" id="addressBetween2"
                                                    name="addressBetween2"
                                                    placeholder="Calle 2"
                                                    required>
