fix image in detail product

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -148,6 +148,10 @@ md-input-container
 
 /* ------ TEMP PRODUCT DETAIL STYLE ----- */
 .temp-product-detail
+  .bg-image-single
+    background-size cover
+    background-position center
+    height 300px
   .article-description
     md-input-container
       width 50%
